; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch_generate.c_git_diff_blobs.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch_generate.c_git_diff_blobs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_diff_blobs(i32* %0, i8* %1, i32* %2, i8* %3, i32* %4, i32 %5, i32 %6, i32 %7, i32 %8, i8* %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i8*, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store i32* %0, i32** %11, align 8
  store i8* %1, i8** %12, align 8
  store i32* %2, i32** %13, align 8
  store i8* %3, i8** %14, align 8
  store i32* %4, i32** %15, align 8
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i8* %9, i8** %20, align 8
  %23 = load i32*, i32** %11, align 8
  %24 = load i8*, i8** %12, align 8
  %25 = call i32 @GIT_DIFF_FILE_CONTENT_SRC__BLOB(i32* %23, i8* %24)
  store i32 %25, i32* %21, align 4
  %26 = load i32*, i32** %13, align 8
  %27 = load i8*, i8** %14, align 8
  %28 = call i32 @GIT_DIFF_FILE_CONTENT_SRC__BLOB(i32* %26, i8* %27)
  store i32 %28, i32* %22, align 4
  %29 = load i32*, i32** %15, align 8
  %30 = load i32, i32* %16, align 4
  %31 = load i32, i32* %17, align 4
  %32 = load i32, i32* %18, align 4
  %33 = load i32, i32* %19, align 4
  %34 = load i8*, i8** %20, align 8
  %35 = call i32 @diff_from_sources(i32* %21, i32* %22, i32* %29, i32 %30, i32 %31, i32 %32, i32 %33, i8* %34)
  ret i32 %35
}

declare dso_local i32 @GIT_DIFF_FILE_CONTENT_SRC__BLOB(i32*, i8*) #1

declare dso_local i32 @diff_from_sources(i32*, i32*, i32*, i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
